--- a/Sentiment_Analysis_on_Amazon_Products_Review.ipynb
+++ b/Sentiment_Analysis_on_Amazon_Products_Review.ipynb
@@ -33,6 +33,8 @@
       },
       "source": [
         "# Sentiment Analysis on Amazon Products Review\n",
+        "\n",
+        "The data is a public dataset containing customers' review on Amazon. Purpose of this project is to practice using AWS sentiment analysis tool to analyze the tone of the review.\n",
         "\n"
       ]
     },
@@ -43,7 +45,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 1. Ingest"
+        "## 1. Import Data"
       ]
     },
     {
@@ -550,7 +552,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### Apply to Amazon product dataset\n"
+        "### Apply to Amazon product review dataset\n"
       ]
     },
     {
@@ -827,6 +829,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "xaBk8GjCBQNz",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Wordcloud for positive reviews"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "XnoBvrj_at8S",
@@ -901,6 +913,16 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "agODDMuiBXxV",
+        "colab_type": "text"
+      },
+      "source": [
+        "### Wordcloud for negative reviews"
       ]
     },
     {
